# tuwairish

./: README.md  pyproject.toml
tuwairish/: api.py  hooks.py  modules.txt
tuwairish/public/js/: last_buying_price.js  last_selling_price.js
tuwairish/tuwairish/custom/: customer_group.json  journal_entry_account.json  packed_item.json  payment_entry.json  payment_entry_deduction.json  purchase_invoice.json  purchase_invoice_item.json  purchase_taxes_and_charges.json  sales_invoice.json  sales_invoice_item.json  sales_taxes_and_charges.json
tuwairish/tuwairish/dashboard_chart/abudhabi_line/: abudhabi_line.json
tuwairish/tuwairish/dashboard_chart/al_faya_line/: al_faya_line.json
tuwairish/tuwairish/dashboard_chart/counter/: counter.json
tuwairish/tuwairish/dashboard_chart/gayathi_line/: gayathi_line.json
tuwairish/tuwairish/dashboard_chart/i_cad_line/: i_cad_line.json
tuwairish/tuwairish/dashboard_chart/mbz_line/: mbz_line.json
tuwairish/tuwairish/dashboard_chart/musaffah_line/: musaffah_line.json
tuwairish/tuwairish/dashboard_chart/sanayya_line/: sanayya_line.json
tuwairish/tuwairish/dashboard_chart/shabiya_line/: shabiya_line.json
tuwairish/tuwairish/dashboard_chart/shahama_line/: shahama_line.json
tuwairish/tuwairish/number_card/abudhabi_line/: abudhabi_line.json
tuwairish/tuwairish/number_card/al_faya_line/: al_faya_line.json
tuwairish/tuwairish/number_card/counter/: counter.json
tuwairish/tuwairish/number_card/fuel_expense/: fuel_expense.json
tuwairish/tuwairish/number_card/gayathi_line/: gayathi_line.json
(+15 files in other folders)
